added restart button
- press space to restart (bug that is now a feature)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="sketch">
         <div class="button">
           <button onClick="resetSketch();">restart</button>
-          <h3 id="text">use wasd to move and arrow keys to shoot</h3>
+          <h3 id="text">use wasd to move and arrow keys to shoot, space to restart</h3>
         </div>
       </div>
     </div>
